[gd_scene load_steps=8 format=3 uid="uid://p27up3fri21o"]

[ext_resource type="Script" path="res://scenes/Game/game over/game_over.gd" id="1_k2nfp"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="2_ikx05"]
[ext_resource type="Theme" uid="uid://bboe8iq4xv723" path="res://assets/button theme/game_over.tres" id="3_w2ydp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4tsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swts7"]
bg_color = Color(0, 0.724038, 0.243579, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ous5"]
bg_color = Color(0.739047, 0.576397, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_3f0kg"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/fonts/font = ExtResource("2_ikx05")
Button/styles/hover_pressed_mirrored = null
Button/styles/normal = SubResource("StyleBoxFlat_swts7")
Button/styles/normal_mirrored = null
Button/styles/pressed = SubResource("StyleBoxFlat_1ous5")

[node name="Game_Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_k2nfp")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_ikx05")
theme_override_font_sizes/font_size = 64
text = "YOU DEAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_v4tsr")

[node name="restart_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_3f0kg")
theme_override_fonts/font = ExtResource("2_ikx05")
text = "RESUME"

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_w2ydp")
theme_override_fonts/font = ExtResource("2_ikx05")
text = "QUIT GAME"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
